# rumble-ai-practices

./: Cargo.toml  README.fr.md  README.md  lighthouserc.json
.github/workflows/: a11y-perf.yml  ci.yml  cohort-e2e.yml  db-inspection.yml  e2e.yml  hygiene.yml
apps/web/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts
apps/web/assets/: organisations.css  organisations.html  styles.css  tokens.css
apps/web/e2e/: cohort.spec.ts  parcours.spec.ts
apps/web/src/: lib.rs  main.rs
apps/web/tests/: engine_pipeline.rs  wcag_contrast.rs
content/media/: bias-visual-media.yml  deepfakes-media.yml  profiles-media.yml
content/questions/: bias-visual.yml  deepfakes.yml  profiles.yml  situations.yml  statements.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/content/src/: lib.rs
crates/domain/src/: lib.rs
crates/session/src/: lib.rs
crates/store/: Cargo.toml
crates/store/.sqlx/: query-06491592ad8f84b6cd299e7c3b92c4c8a61eb14b79949fe4dd562589793eb4a6.json  query-11fb1fec5d5939d831209fcd7de52bbc228aac4bf2d1869a3552d1b392863957.json  query-44587f8d57299f9f06af465bc1fcfc42dd83c1b8e0b4ea253fec394f41cb8e08.json  query-4c85bdd4b0ca1900490f4ad03369ff8d94f4c1632630efcc3cf02996a36bad76.json  query-734ae9d984de9266c763be895388e5333df764f518eb6c9173ae42138d4dc106.json  query-9e74856abfaa7b4440bc968f177e81b7c061e713e6938e39e371c8aceb47d4bb.json  query-e72d877a0cf2a2ed5a0455c2ab30d7c1456233c4ac77f03d879244b24a0eef1e.json
crates/store/migrations/: 0001_anonymous_cohort.sql
crates/store/src/: lib.rs
crates/ui/examples/: preview.html
crates/ui/src/: lib.rs
docs/: README.md  benchmark-jeu-competitif.md  deploy.md  product-boundaries.md  product-readiness.md  scoring.md  security-rgpd.md  ux.md
docs/adrs/: 0005-supersede-native-proof-gate-portal-uniffi.md  0006-anonymity-and-retention-cohort.md  0007-refonte-jeu-sensibilisation-biais.md  0008-reuse-medias-synthetiques-droits-acquis.md  0009-cohorte-per-item-k-anon.md
docs/plans/: 2026-07-ai-practices-pro-multiplatform.md  2026-07-drill-formats.md  2026-07-rumble-bias-game-refonte.md
